--- a/Notion 66 Days of Data.ipynb
+++ b/Notion 66 Days of Data.ipynb
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -625,8 +625,8 @@
        "      <td>https://www.youtube.com/watch?v=GmW4F6MHqqs</td>\n",
        "      <td>NaN</td>\n",
        "      <td>28.00</td>\n",
-       "      <td>2020-09-23 00:00:00</td>\n",
-       "      <td>2020-09-23 00:00:00</td>\n",
+       "      <td>2020-09-23</td>\n",
+       "      <td>2020-09-23</td>\n",
        "      <td>0.466667</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -646,8 +646,8 @@
        "      <td>https://www.youtube.com/watch?v=OP3dA2GcAh8</td>\n",
        "      <td>NaN</td>\n",
        "      <td>15.51</td>\n",
-       "      <td>2020-09-25 00:00:00</td>\n",
-       "      <td>2020-09-25 00:00:00</td>\n",
+       "      <td>2020-09-25</td>\n",
+       "      <td>2020-09-25</td>\n",
        "      <td>0.258500</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -667,8 +667,8 @@
        "      <td>https://www.youtube.com/watch?v=MpF9HENQjDo</td>\n",
        "      <td>NaN</td>\n",
        "      <td>7.50</td>\n",
-       "      <td>2020-09-23 00:00:00</td>\n",
-       "      <td>2020-09-23 00:00:00</td>\n",
+       "      <td>2020-09-23</td>\n",
+       "      <td>2020-09-23</td>\n",
        "      <td>0.125000</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -688,8 +688,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2020-07-31 00:00:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2020-07-31</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -709,8 +709,8 @@
        "      <td>https://podcasts.apple.com/us/podcast/50-ken-j...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>56.00</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2020-09-23 00:00:00</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>2020-09-23</td>\n",
        "      <td>0.933333</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
@@ -749,12 +749,12 @@
        "149                                                NaN    NaN      NaN   \n",
        "150  https://podcasts.apple.com/us/podcast/50-ken-j...    NaN    56.00   \n",
        "\n",
-       "             Finish Date           Start Date     Hours Notes? Linked Up?  \\\n",
-       "146  2020-09-23 00:00:00  2020-09-23 00:00:00  0.466667     No         No   \n",
-       "147  2020-09-25 00:00:00  2020-09-25 00:00:00  0.258500     No         No   \n",
-       "148  2020-09-23 00:00:00  2020-09-23 00:00:00  0.125000     No         No   \n",
-       "149                    0  2020-07-31 00:00:00  0.000000     No         No   \n",
-       "150                    0  2020-09-23 00:00:00  0.933333     No         No   \n",
+       "    Finish Date Start Date     Hours Notes? Linked Up?  \\\n",
+       "146  2020-09-23 2020-09-23  0.466667     No         No   \n",
+       "147  2020-09-25 2020-09-25  0.258500     No         No   \n",
+       "148  2020-09-23 2020-09-23  0.125000     No         No   \n",
+       "149         NaT 2020-07-31  0.000000     No         No   \n",
+       "150         NaT 2020-09-23  0.933333     No         No   \n",
        "\n",
        "     Related to Coding Course Notes (Property)  \n",
        "146                                        NaN  \n",
@@ -764,7 +764,7 @@
        "150                                        NaN  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,24 +777,101 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "I'll only be analyzing observations that I completed (Status = Finished) and that were done during the #66DaysofData challenge. Those are tagged #66DaysofData"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Dropping Unnecessary Columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 151 entries, 0 to 150\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column                                     Non-Null Count  Dtype         \n",
+      "---  ------                                     --------------  -----         \n",
+      " 0   Type                                       106 non-null    object        \n",
+      " 1   Name                                       150 non-null    object        \n",
+      " 2   Language/Software                          29 non-null     object        \n",
+      " 3   Packages                                   13 non-null     object        \n",
+      " 4   Tags                                       106 non-null    object        \n",
+      " 5   Author                                     49 non-null     object        \n",
+      " 6   Created                                    151 non-null    datetime64[ns]\n",
+      " 7   Status                                     87 non-null     object        \n",
+      " 8   Score/5                                    27 non-null     object        \n",
+      " 9   URL                                        143 non-null    object        \n",
+      " 10  Source                                     53 non-null     object        \n",
+      " 11  Minutes                                    68 non-null     float64       \n",
+      " 12  Finish Date                                59 non-null     datetime64[ns]\n",
+      " 13  Start Date                                 67 non-null     datetime64[ns]\n",
+      " 14  Hours                                      151 non-null    float64       \n",
+      " 15  Notes?                                     151 non-null    object        \n",
+      " 16  Linked Up?                                 151 non-null    object        \n",
+      " 17  Related to Coding Course Notes (Property)  0 non-null      float64       \n",
+      "dtypes: datetime64[ns](3), float64(3), object(12)\n",
+      "memory usage: 21.4+ KB\n"
+     ]
+    }
+   ],
    "source": [
-    "df = df.drop(\"column\", \"column\", axis=1)"
+    "df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = df.drop([\"Related to Coding Course Notes (Property)\", \"Linked Up?\", \"Notes?\", \"Score/5\", \"URL\"], axis=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 151 entries, 0 to 150\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column             Non-Null Count  Dtype         \n",
+      "---  ------             --------------  -----         \n",
+      " 0   Type               106 non-null    object        \n",
+      " 1   Name               150 non-null    object        \n",
+      " 2   Language/Software  29 non-null     object        \n",
+      " 3   Packages           13 non-null     object        \n",
+      " 4   Tags               106 non-null    object        \n",
+      " 5   Author             49 non-null     object        \n",
+      " 6   Created            151 non-null    datetime64[ns]\n",
+      " 7   Status             87 non-null     object        \n",
+      " 8   Source             53 non-null     object        \n",
+      " 9   Minutes            68 non-null     float64       \n",
+      " 10  Finish Date        59 non-null     datetime64[ns]\n",
+      " 11  Start Date         67 non-null     datetime64[ns]\n",
+      " 12  Hours              151 non-null    float64       \n",
+      "dtypes: datetime64[ns](3), float64(2), object(8)\n",
+      "memory usage: 15.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1127,7 +1204,7 @@
     "## Summary and Conclusion\n",
     "\n",
     "\n",
-    "Insights:\n",
+    "Limitations:\n",
     "- I only gave myself credit for the resources I finished.\n",
     "- There is inevitably missing data. Some videos I watched, articles I read didn't get input into the system.\n",
     "- \n",
