--- a/Notion 66 Days of Data.ipynb
+++ b/Notion 66 Days of Data.ipynb
@@ -17132,7 +17132,7 @@
     "\n",
     "\n",
     "Limitations:\n",
-    "- I only gave myself credit for the resources I finished.\n",
+    "- I did not give myself credit for any material that was started but not finished. For example if I watched half of a 50 minute YouTube video, none of those 25 minutes watched are counted.\n",
     "- There is inevitably missing data. Some videos I watched, articles I read didn't get input into the system.\n",
     "- \n",
     "- "
