--- a/Notion 66 Days of Data.ipynb
+++ b/Notion 66 Days of Data.ipynb
@@ -533,33 +533,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0            NaN\n",
-       "1       February\n",
-       "2       February\n",
-       "3       February\n",
-       "4       February\n",
-       "         ...    \n",
-       "146    September\n",
-       "147    September\n",
-       "148    September\n",
-       "149          NaN\n",
-       "150          NaN\n",
-       "Name: Finish Date, Length: 151, dtype: object"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'Series' object has no attribute 'value_count'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/yg/1lv551fs3rv2fv563t7g29r00000gp/T/ipykernel_1779/47883953.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Finish_Date'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmonth_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_count\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/opt/anaconda3/envs/minimal_ds/lib/python3.10/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5485\u001b[0m         ):\n\u001b[1;32m   5486\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5487\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5488\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5489\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'value_count'"
+     ]
     }
    ],
    "source": [
-    "df['Finish Date'].dt.month_name()"
+    "df['Finish_Date'].dt.month_name()"
    ]
   },
   {
@@ -3036,6 +3027,158 @@
     "#tag_count['tag'] = tag_count['tag'].str.strip() \n",
     "#tag_count"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1     February\n",
+       "2     February\n",
+       "3     February\n",
+       "4     February\n",
+       "5     February\n",
+       "6     February\n",
+       "7     February\n",
+       "9     February\n",
+       "10    February\n",
+       "11    February\n",
+       "12    February\n",
+       "20     January\n",
+       "23     January\n",
+       "27     January\n",
+       "28     January\n",
+       "29     January\n",
+       "32     January\n",
+       "33     January\n",
+       "34     January\n",
+       "35     January\n",
+       "36     January\n",
+       "37     January\n",
+       "38     January\n",
+       "39     January\n",
+       "42     January\n",
+       "44     January\n",
+       "45     January\n",
+       "46     January\n",
+       "47     January\n",
+       "48    December\n",
+       "49    December\n",
+       "50    December\n",
+       "52    December\n",
+       "58    December\n",
+       "60    December\n",
+       "61    December\n",
+       "62    December\n",
+       "65    December\n",
+       "67    December\n",
+       "69         NaN\n",
+       "70     January\n",
+       "71    December\n",
+       "Name: Finish_Date, dtype: object"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Finish_Date'].dt.month_name()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1     Wednesday\n",
+       "2       Tuesday\n",
+       "3       Tuesday\n",
+       "4      Saturday\n",
+       "5        Friday\n",
+       "6        Friday\n",
+       "7        Friday\n",
+       "9      Thursday\n",
+       "10    Wednesday\n",
+       "11       Sunday\n",
+       "12      Tuesday\n",
+       "20      Tuesday\n",
+       "23      Tuesday\n",
+       "27    Wednesday\n",
+       "28    Wednesday\n",
+       "29    Wednesday\n",
+       "32    Wednesday\n",
+       "33      Tuesday\n",
+       "34       Monday\n",
+       "35       Sunday\n",
+       "36       Sunday\n",
+       "37       Sunday\n",
+       "38       Sunday\n",
+       "39       Sunday\n",
+       "42     Saturday\n",
+       "44     Saturday\n",
+       "45     Saturday\n",
+       "46     Saturday\n",
+       "47     Saturday\n",
+       "48       Friday\n",
+       "49       Friday\n",
+       "50       Friday\n",
+       "52       Friday\n",
+       "58    Wednesday\n",
+       "60    Wednesday\n",
+       "61    Wednesday\n",
+       "62    Wednesday\n",
+       "65      Tuesday\n",
+       "67       Monday\n",
+       "69          NaN\n",
+       "70    Wednesday\n",
+       "71      Tuesday\n",
+       "Name: Finish_Date, dtype: object"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Finish_Date'].dt.day_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
