updated to do list

--- a/Notion 66 Days of Data.ipynb
+++ b/Notion 66 Days of Data.ipynb
@@ -15,7 +15,6 @@
    "source": [
     "## TO do list\n",
     "\n",
-    "- analyze the date data to see what days of the week I finished stuff the most \n",
     "- add titles to the graphs\n",
     "- maybe change the colors"
    ]
@@ -533,20 +532,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Series' object has no attribute 'value_count'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/yg/1lv551fs3rv2fv563t7g29r00000gp/T/ipykernel_1779/47883953.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Finish_Date'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmonth_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_count\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/opt/anaconda3/envs/minimal_ds/lib/python3.10/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   5485\u001b[0m         ):\n\u001b[1;32m   5486\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5487\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5488\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5489\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Series' object has no attribute 'value_count'"
-     ]
+     "data": {
+      "text/plain": [
+       "1     February\n",
+       "2     February\n",
+       "3     February\n",
+       "4     February\n",
+       "5     February\n",
+       "6     February\n",
+       "7     February\n",
+       "9     February\n",
+       "10    February\n",
+       "11    February\n",
+       "12    February\n",
+       "20     January\n",
+       "23     January\n",
+       "27     January\n",
+       "28     January\n",
+       "29     January\n",
+       "32     January\n",
+       "33     January\n",
+       "34     January\n",
+       "35     January\n",
+       "36     January\n",
+       "37     January\n",
+       "38     January\n",
+       "39     January\n",
+       "42     January\n",
+       "44     January\n",
+       "45     January\n",
+       "46     January\n",
+       "47     January\n",
+       "48    December\n",
+       "49    December\n",
+       "50    December\n",
+       "52    December\n",
+       "58    December\n",
+       "60    December\n",
+       "61    December\n",
+       "62    December\n",
+       "65    December\n",
+       "67    December\n",
+       "69         NaN\n",
+       "70     January\n",
+       "71    December\n",
+       "Name: Finish_Date, dtype: object"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
