--- a/Notion 66 Days of Data.ipynb
+++ b/Notion 66 Days of Data.ipynb
@@ -3269,6 +3269,199 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Language/Software</th>\n",
+       "      <th>Packages</th>\n",
+       "      <th>Tags</th>\n",
+       "      <th>Author</th>\n",
+       "      <th>Created</th>\n",
+       "      <th>Status</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Minutes</th>\n",
+       "      <th>Finish_Date</th>\n",
+       "      <th>Start_Date</th>\n",
+       "      <th>Hours</th>\n",
+       "      <th>finish_day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Course</td>\n",
+       "      <td>Intermediate Importing Data in Python</td>\n",
+       "      <td>Python</td>\n",
+       "      <td>BeautifulSoup, Tweepy, json, request</td>\n",
+       "      <td>#66DaysofData, APIs, Importing Data, Python, R...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-02-23 00:18:00</td>\n",
+       "      <td>Finished</td>\n",
+       "      <td>DataCamp</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>2022-02-23</td>\n",
+       "      <td>2022-02-23</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Course</td>\n",
+       "      <td>Introduction to Importing Data in Python</td>\n",
+       "      <td>Python</td>\n",
+       "      <td>numpy, pandas, scipy, sqlalchemy</td>\n",
+       "      <td>#66DaysofData, Importing Data, Pandas, Python,...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-01-19 19:16:00</td>\n",
+       "      <td>Finished</td>\n",
+       "      <td>DataCamp</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>2022-02-22</td>\n",
+       "      <td>2022-01-19</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Tuesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Course</td>\n",
+       "      <td>Intro to Data Visualization with Seaborn</td>\n",
+       "      <td>Python</td>\n",
+       "      <td>seaborn</td>\n",
+       "      <td>#66DaysofData, Data Analysis, Data Science, Da...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-01-15 23:18:00</td>\n",
+       "      <td>Finished</td>\n",
+       "      <td>DataCamp</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>2022-01-18</td>\n",
+       "      <td>2022-01-15</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Tuesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70</th>\n",
+       "      <td>Course</td>\n",
+       "      <td>Intro to Data Visualization in Matplotlib</td>\n",
+       "      <td>Python</td>\n",
+       "      <td>matplotlib</td>\n",
+       "      <td>#66DaysofData, Data Analysis, Data Science, Da...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-12-28 12:42:00</td>\n",
+       "      <td>Finished</td>\n",
+       "      <td>DataCamp</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>2022-01-12</td>\n",
+       "      <td>2021-12-28</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Wednesday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>Course</td>\n",
+       "      <td>Joining Data with pandas</td>\n",
+       "      <td>Python</td>\n",
+       "      <td>pandas</td>\n",
+       "      <td>#66DaysofData, Pandas, Python, Round1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2021-12-22 20:55:00</td>\n",
+       "      <td>Finished</td>\n",
+       "      <td>DataCamp</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>2021-12-28</td>\n",
+       "      <td>2021-12-17</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>Tuesday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Type                                       Name Language/Software  \\\n",
+       "1   Course      Intermediate Importing Data in Python            Python   \n",
+       "12  Course   Introduction to Importing Data in Python            Python   \n",
+       "23  Course   Intro to Data Visualization with Seaborn            Python   \n",
+       "70  Course  Intro to Data Visualization in Matplotlib            Python   \n",
+       "71  Course                   Joining Data with pandas            Python   \n",
+       "\n",
+       "                                Packages  \\\n",
+       "1   BeautifulSoup, Tweepy, json, request   \n",
+       "12      numpy, pandas, scipy, sqlalchemy   \n",
+       "23                               seaborn   \n",
+       "70                            matplotlib   \n",
+       "71                                pandas   \n",
+       "\n",
+       "                                                 Tags Author  \\\n",
+       "1   #66DaysofData, APIs, Importing Data, Python, R...    NaN   \n",
+       "12  #66DaysofData, Importing Data, Pandas, Python,...    NaN   \n",
+       "23  #66DaysofData, Data Analysis, Data Science, Da...    NaN   \n",
+       "70  #66DaysofData, Data Analysis, Data Science, Da...    NaN   \n",
+       "71              #66DaysofData, Pandas, Python, Round1    NaN   \n",
+       "\n",
+       "               Created    Status    Source  Minutes Finish_Date Start_Date  \\\n",
+       "1  2022-02-23 00:18:00  Finished  DataCamp    180.0  2022-02-23 2022-02-23   \n",
+       "12 2022-01-19 19:16:00  Finished  DataCamp    180.0  2022-02-22 2022-01-19   \n",
+       "23 2022-01-15 23:18:00  Finished  DataCamp    240.0  2022-01-18 2022-01-15   \n",
+       "70 2021-12-28 12:42:00  Finished  DataCamp    240.0  2022-01-12 2021-12-28   \n",
+       "71 2021-12-22 20:55:00  Finished  DataCamp    240.0  2021-12-28 2021-12-17   \n",
+       "\n",
+       "    Hours finish_day  \n",
+       "1     3.0  Wednesday  \n",
+       "12    3.0    Tuesday  \n",
+       "23    4.0    Tuesday  \n",
+       "70    4.0  Wednesday  \n",
+       "71    4.0    Tuesday  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datacamp_df = df[(df[\"Source\"] == \"DataCamp\")]\n",
+    "datacamp_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3310,7 +3503,9 @@
    "source": [
     "# Insights\n",
     "- I only finished courses on Tuesdays and Wednesdays\n",
-    "- Videos was the only type of content I completed every day of the week\n"
+    "- Videos was the only type of content I completed every day of the week\n",
+    "- During the challenge I was doing the DataCamp Python for Data Analysts career track, so it makes sense that the source I used most was DataCamp, and the tags that I spent the most time on were Python, Data Science, and Data Analysis\n",
+    "- The DataCamp course didn't include author's names\n"
    ]
   },
   {
